# refrigerator

./: .gitignore  CMakeLists.txt  README.md  changelog.txt  otasend.sh  otasend1.sh  otastatus.py  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  cooler.c  cooler.h  counter.c  homeapp.h  temperatures.c  temperatures.h
